{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 28,
  "lineage": "82b6d17f-0a23-70dd-3087-301c0c13aed4",
  "resources": [
    {
      "module": "module.eip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d5d37ad67407703d",
            "arn": "arn:aws:ec2:us-west-2:181268068448:elastic-ip/eipalloc-0d5d37ad67407703d",
            "association_id": "eipassoc-09e78511fbb7ee1d0",
            "domain": "vpc",
            "id": "eipalloc-0d5d37ad67407703d",
            "network_border_group": "us-west-2",
            "network_interface": "eni-027846b3c16d299c4",
            "private_dns": "ip-10-0-1-116.us-west-2.compute.internal",
            "private_ip": "10.0.1.116",
            "public_dns": "ec2-52-89-16-115.us-west-2.compute.amazonaws.com",
            "public_ip": "52.89.16.115",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Name": "leelasai-eip"
            },
            "tags_all": {
              "Name": "leelasai-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:181268068448:internet-gateway/igw-05ae84c2454388b23",
            "id": "igw-05ae84c2454388b23",
            "owner_id": "181268068448",
            "region": "us-west-2",
            "tags": {
              "Name": "leelasai-internet-gateway"
            },
            "tags_all": {
              "Name": "leelasai-internet-gateway"
            },
            "vpc_id": "vpc-097666afc03073ddf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gw",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d5d37ad67407703d",
            "association_id": "eipassoc-09e78511fbb7ee1d0",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-02d9182b7ce096f22",
            "network_interface_id": "eni-027846b3c16d299c4",
            "private_ip": "10.0.1.116",
            "public_ip": "52.89.16.115",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-025c1bb62808e63fd",
            "tags": {
              "Name": "leelasai-nat-gateway"
            },
            "tags_all": {
              "Name": "leelasai-nat-gateway"
            },
            "vpc_id": "vpc-097666afc03073ddf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eip.aws_eip.nat",
            "module.public_subnet.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0786adace1541ca80",
            "arn": "arn:aws:ec2:us-west-2:181268068448:instance/i-0a29f0dd0e4333d26",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a29f0dd0e4333d26",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "leelasai-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c93bb9b561372c68"
              }
            ],
            "primary_network_interface_id": "eni-0c93bb9b561372c68",
            "private_dns": "ip-10-0-2-199.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.199",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-095bf6f5581db8412",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0713239f6380c8dec",
            "tags": {
              "Name": "leelasai-EC2-private-instance"
            },
            "tags_all": {
              "Name": "leelasai-EC2-private-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e0c330b6cf7703e6"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "181268068448",
            "id": "i-0a29f0dd0e4333d26",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.private_subnet.aws_subnet.private",
            "module.security_group.aws_security_group.security-grp",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06dd87ee5731b2dca",
            "region": "us-west-2",
            "route_table_id": "rtb-0fea2c0ceec4aaff9",
            "subnet_id": "subnet-0713239f6380c8dec"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.eip.aws_eip.nat",
            "module.nat_gw.aws_nat_gateway.nat",
            "module.private_route_table.aws_route_table.private-route-table",
            "module.private_subnet.aws_subnet.private",
            "module.public_subnet.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:181268068448:route-table/rtb-0fea2c0ceec4aaff9",
            "id": "rtb-0fea2c0ceec4aaff9",
            "owner_id": "181268068448",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-02d9182b7ce096f22",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "leelasai-private-route-table"
            },
            "tags_all": {
              "Name": "leelasai-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-097666afc03073ddf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "181268068448",
            "id": "rtb-0fea2c0ceec4aaff9",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.eip.aws_eip.nat",
            "module.nat_gw.aws_nat_gateway.nat",
            "module.public_subnet.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:181268068448:subnet/subnet-0713239f6380c8dec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0713239f6380c8dec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "181268068448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "leelasai-private-subnet"
            },
            "tags_all": {
              "Name": "leelasai-private-subnet"
            },
            "vpc_id": "vpc-097666afc03073ddf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "181268068448",
            "id": "subnet-0713239f6380c8dec",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0786adace1541ca80",
            "arn": "arn:aws:ec2:us-west-2:181268068448:instance/i-094c43d72259233db",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-094c43d72259233db",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "leelasai-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04a4b9df5d3aedd77"
              }
            ],
            "primary_network_interface_id": "eni-04a4b9df5d3aedd77",
            "private_dns": "ip-10-0-1-187.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.187",
            "public_ip": "52.38.69.246",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01f217611422db306",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025c1bb62808e63fd",
            "tags": {
              "Name": "leelasai-EC2-public-instance"
            },
            "tags_all": {
              "Name": "leelasai-EC2-public-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e0c330b6cf7703e6"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "181268068448",
            "id": "i-094c43d72259233db",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.public_subnet.aws_subnet.public",
            "module.security_group.aws_security_group.security-grp",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_route_association",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a4256882c0c775d0",
            "region": "us-west-2",
            "route_table_id": "rtb-0f81697c098e0cf90",
            "subnet_id": "subnet-025c1bb62808e63fd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.public_route_table.aws_route_table.route-table",
            "module.public_subnet.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:181268068448:route-table/rtb-0f81697c098e0cf90",
            "id": "rtb-0f81697c098e0cf90",
            "owner_id": "181268068448",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05ae84c2454388b23",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "leelasai-public-route-table"
            },
            "tags_all": {
              "Name": "leelasai-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-097666afc03073ddf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "181268068448",
            "id": "rtb-0f81697c098e0cf90",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:181268068448:subnet/subnet-025c1bb62808e63fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025c1bb62808e63fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "181268068448",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "leelasai-public-subnet"
            },
            "tags_all": {
              "Name": "leelasai-public-subnet"
            },
            "vpc_id": "vpc-097666afc03073ddf"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "181268068448",
            "id": "subnet-025c1bb62808e63fd",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security-grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:181268068448:security-group/sg-0e0c330b6cf7703e6",
            "description": "Security group for EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e0c330b6cf7703e6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "leelasai-security-group",
            "name_prefix": "",
            "owner_id": "181268068448",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "leelasai-security-group"
            },
            "tags_all": {
              "Name": "leelasai-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-097666afc03073ddf"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "181268068448",
            "id": "sg-0e0c330b6cf7703e6",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:181268068448:vpc/vpc-097666afc03073ddf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09a4aedbaef87bccd",
            "default_route_table_id": "rtb-0fa8e5d953d598e88",
            "default_security_group_id": "sg-0f2a0ace183232eb1",
            "dhcp_options_id": "dopt-08b5cc314f1f2d537",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-097666afc03073ddf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fa8e5d953d598e88",
            "owner_id": "181268068448",
            "region": "us-west-2",
            "tags": {
              "Name": "leelasai-vpc"
            },
            "tags_all": {
              "Name": "leelasai-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "181268068448",
            "id": "vpc-097666afc03073ddf",
            "region": "us-west-2"
          }
        }
      ]
    }
  ]
}